adjust width on cards to prevent badge overlap with text

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -464,7 +464,7 @@ a.menu__link.menu__link--sublist.menu__link--sublist-caret::after {
 .subSectionTitle {
   display: flex;
   justify-content: space-between;
-  width: 75%;
+  width: 70%;
 }
 
 .card-disabled {
